[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "neuromod-snn"
version = "0.1.0"
description = "Compact paper-facing code for neuromodulated spiking neural networks."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "numpy",
  "h5py",
  "torch",
]

[tool.setuptools]
packages = ["neuromod_snn"]
